Archive2/a7/8e84e21d532797/output/output
main.cpp:4:5: error: statement requires expression of integer type ('double' invalid)
    switch(f / 1.0)
    ^      ~~~~~~~
1 error generated.
